[project]
name = "ddos-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.14.0",
    "gevent>=25.9.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "load-dotenv>=0.1.0",
    "locust>=2.43.3",
    "psutil>=7.2.2",
]
